proj2-kdinatal/output/ProjLangParser.java
/* ProjLangParser.java */
/* Generated By:JavaCC: Do not edit this line. ProjLangParser.java */
public class ProjLangParser implements ProjLangParserConstants {

// Complete the rule for input() below
// and add rest of the parser rules
// following it.
  final public 
Expr input() throws ParseException {Expr e1;
    e1 = expr();
    jj_consume_token(SEMI);
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

// complete the rule and do not change the return type

// Add rest of the parser rules here
  final public 
Expr expr() throws ParseException {Expr e1;
    if (jj_2_1(2)) {
      e1 = if_exp();
{if ("" != null) return e1;}
    } else if (jj_2_2(2)) {
      e1 = letval_exp();
{if ("" != null) return e1;}
    } else if (jj_2_3(2)) {
      e1 = letfun_exp();
{if ("" != null) return e1;}
    } else if (jj_2_4(2)) {
      e1 = while_exp();
{if ("" != null) return e1;}
    } else if (jj_2_5(2)) {
      e1 = seq_exp();
{if ("" != null) return e1;}
    } else if (jj_2_6(2)) {
      e1 = assn_exp();
{if ("" != null) return e1;}
    } else if (jj_2_7(2)) {
      e1 = not_exp();
{if ("" != null) return e1;}
    } else if (jj_2_8(2)) {
      e1 = rel_exp();
{if ("" != null) return e1;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Expr if_exp() throws ParseException {Expr e1, e2, e3;
    jj_consume_token(IF);
    e1 = expr();
    jj_consume_token(THEN);
    e2 = expr();
    jj_consume_token(ELSE);
    e3 = expr();
e1 = new IfExp(e1, e2, e3); {if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr letval_exp() throws ParseException {Expr e1, e2; String id;
    jj_consume_token(LET);
    jj_consume_token(VAL);
    jj_consume_token(ID);
id = token.image;
    jj_consume_token(EQUAL);
    e1 = expr();
    jj_consume_token(IN);
    e2 = expr();
    jj_consume_token(END);
e1 = new LetValExp(id, e1, e2); {if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr letfun_exp() throws ParseException {Expr e1, e2; String id, fun;
    jj_consume_token(LET);
    jj_consume_token(FUN);
    jj_consume_token(ID);
fun = token.image;
    jj_consume_token(LPAR);
    jj_consume_token(ID);
id = token.image;
    jj_consume_token(RPAR);
    jj_consume_token(EQUAL);
    e1 = expr();
    jj_consume_token(IN);
    e2 = expr();
    jj_consume_token(END);
e1 = new LetFunExp(fun, id, e1, e2); {if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr while_exp() throws ParseException {Expr e1, e2;
    jj_consume_token(WHILE);
    e1 = expr();
    jj_consume_token(DO);
    e2 = expr();
e1 = new WhileExp(e1, e2); {if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr seq_exp() throws ParseException {Expr e1, e2;
    jj_consume_token(LBRACKET);
    e1 = expr();
    label_1:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(SEMI);
      e2 = expr();
e1 = new SeqExp(e1, e2);
    }
    jj_consume_token(RBRACKET);
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr not_exp() throws ParseException {Expr e1;
    jj_consume_token(NEG);
    e1 = expr();
e1 = new NotExp(e1); {if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr assn_exp() throws ParseException {String id; Expr e1;
    jj_consume_token(ID);
id = token.image;
    jj_consume_token(ASSIGN);
    e1 = expr();
e1 = new AssnExp(id, e1); {if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr rel_exp() throws ParseException {Expr e1, e2; String op;
    e1 = arith_exp();
    if (jj_2_12(2)) {
      if (jj_2_10(2)) {
        jj_consume_token(EQUAL);
op = token.image;
      } else if (jj_2_11(2)) {
        jj_consume_token(LESS);
op = token.image;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = arith_exp();
if (op.equals("=")) e1 = new BinExp(BinOp.EQ, e1, e2); else e1 = new BinExp(BinOp.LT, e1, e2);
    } else {
      ;
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr arith_exp() throws ParseException {Expr e1, e2; String op;
    e1 = term();
    label_2:
    while (true) {
      if (jj_2_13(2)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_14(2)) {
        jj_consume_token(ADD);
op = token.image;
      } else if (jj_2_15(2)) {
        jj_consume_token(SUB);
op = token.image;
      } else if (jj_2_16(2)) {
        jj_consume_token(OR);
op = token.image;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = term();
if (op.equals("+")) e1 = new BinExp(BinOp.PLUS, e1, e2); else if (op.equals("-")) e1 = new BinExp(BinOp.MINUS, e1, e2); else e1 = new BinExp(BinOp.OR, e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr term() throws ParseException {Expr e1, e2; String op;
    e1 = factor();
    label_3:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_18(2)) {
        jj_consume_token(MUL);
op = token.image;
      } else if (jj_2_19(2)) {
        jj_consume_token(DIV);
op = token.image;
      } else if (jj_2_20(2)) {
        jj_consume_token(AND);
op = token.image;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = factor();
if (op.equals("*")) e1 = new BinExp(BinOp.TIMES, e1, e2); else if (op.equals("/")) e1 = new BinExp(BinOp.DIV, e1, e2); else e1 = new BinExp(BinOp.AND, e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  final public Expr factor() throws ParseException {int i; String s; Expr e1;
    if (jj_2_21(2)) {
      jj_consume_token(NUM);
i = Integer.parseInt(token.image); {if ("" != null) return new IntConst(i);}
    } else if (jj_2_22(2)) {
      jj_consume_token(TRUE);
{if ("" != null) return new BoolConst(true);}
    } else if (jj_2_23(2)) {
      jj_consume_token(FALSE);
{if ("" != null) return new BoolConst(false);}
    } else if (jj_2_24(2)) {
      jj_consume_token(ID);
s = token.image;
      jj_consume_token(LPAR);
      e1 = expr();
      jj_consume_token(RPAR);
e1 = new AppExp(s, e1); {if ("" != null) return e1;}
    } else if (jj_2_25(2)) {
      jj_consume_token(ID);
{if ("" != null) return new VarExp(token.image);}
    } else if (jj_2_26(2)) {
      jj_consume_token(LPAR);
      e1 = expr();
      jj_consume_token(RPAR);
{if ("" != null) return e1;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_3R_if_exp_153_36_4()
 {
    if (jj_scan_token(IF)) return true;
    if (jj_3R_expr_151_26_12()) return true;
    return false;
  }

  private boolean jj_3_20()
 {
    if (jj_scan_token(AND)) return true;
    return false;
  }

  private boolean jj_3_26()
 {
    if (jj_scan_token(LPAR)) return true;
    if (jj_3R_expr_151_26_12()) return true;
    return false;
  }

  private boolean jj_3_25()
 {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  private boolean jj_3_24()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LPAR)) return true;
    return false;
  }

  private boolean jj_3_23()
 {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  private boolean jj_3_22()
 {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_if_exp_153_36_4()) return true;
    return false;
  }

  private boolean jj_3R_expr_151_26_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_1()) return false;
    jj_scanpos = xsp;
    if (!jj_3_2()) return false;
    jj_scanpos = xsp;
    if (!jj_3_3()) return false;
    jj_scanpos = xsp;
    if (!jj_3_4()) return false;
    jj_scanpos = xsp;
    if (!jj_3_5()) return false;
    jj_scanpos = xsp;
    if (!jj_3_6()) return false;
    jj_scanpos = xsp;
    if (!jj_3_7()) return false;
    jj_scanpos = xsp;
    if (jj_3_8()) return true;
    return false;
  }

  private boolean jj_3R_factor_174_2_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_21()) return false;
    jj_scanpos = xsp;
    if (!jj_3_22()) return false;
    jj_scanpos = xsp;
    if (!jj_3_23()) return false;
    jj_scanpos = xsp;
    if (!jj_3_24()) return false;
    jj_scanpos = xsp;
    if (!jj_3_25()) return false;
    jj_scanpos = xsp;
    if (jj_3_26()) return true;
    return false;
  }

  private boolean jj_3_21()
 {
    if (jj_scan_token(NUM)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_while_exp_159_35_7()) return true;
    return false;
  }

  private boolean jj_3_7()
 {
    if (jj_3R_not_exp_163_29_10()) return true;
    return false;
  }

  private boolean jj_3_11()
 {
    if (jj_scan_token(LESS)) return true;
    return false;
  }

  private boolean jj_3_15()
 {
    if (jj_scan_token(SUB)) return true;
    return false;
  }

  private boolean jj_3_19()
 {
    if (jj_scan_token(DIV)) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_3R_letfun_exp_157_52_6()) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_3R_assn_exp_165_41_9()) return true;
    return false;
  }

  private boolean jj_3_10()
 {
    if (jj_scan_token(EQUAL)) return true;
    return false;
  }

  private boolean jj_3_14()
 {
    if (jj_scan_token(ADD)) return true;
    return false;
  }

  private boolean jj_3_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_10()) return false;
    jj_scanpos = xsp;
    if (jj_3_11()) return true;
    if (jj_3R_arith_exp_169_46_13()) return true;
    return false;
  }

  private boolean jj_3_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_14()) return false;
    jj_scanpos = xsp;
    if (!jj_3_15()) return false;
    jj_scanpos = xsp;
    if (jj_3_16()) return true;
    if (jj_3R_term_171_41_14()) return true;
    return false;
  }

  private boolean jj_3_18()
 {
    if (jj_scan_token(MUL)) return true;
    return false;
  }

  private boolean jj_3_17()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (!jj_3_18()) return false;
    jj_scanpos = xsp;
    if (!jj_3_19()) return false;
    jj_scanpos = xsp;
    if (jj_3_20()) return true;
    if (jj_3R_factor_174_2_15()) return true;
    return false;
  }

  private boolean jj_3_9()
 {
    if (jj_scan_token(SEMI)) return true;
    if (jj_3R_expr_151_26_12()) return true;
    return false;
  }

  private boolean jj_3R_arith_exp_169_46_13()
 {
    if (jj_3R_term_171_41_14()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_13()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_term_171_41_14()
 {
    if (jj_3R_factor_174_2_15()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_17()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_rel_exp_167_44_11()
 {
    if (jj_3R_arith_exp_169_46_13()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3R_letfun_exp_157_52_6()
 {
    if (jj_scan_token(LET)) return true;
    if (jj_scan_token(FUN)) return true;
    return false;
  }

  private boolean jj_3R_assn_exp_165_41_9()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_3R_letval_exp_155_47_5()) return true;
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_seq_exp_161_33_8()) return true;
    return false;
  }

  private boolean jj_3R_letval_exp_155_47_5()
 {
    if (jj_scan_token(LET)) return true;
    if (jj_scan_token(VAL)) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_3R_rel_exp_167_44_11()) return true;
    return false;
  }

  private boolean jj_3R_while_exp_159_35_7()
 {
    if (jj_scan_token(WHILE)) return true;
    if (jj_3R_expr_151_26_12()) return true;
    return false;
  }

  private boolean jj_3R_seq_exp_161_33_8()
 {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_3R_expr_151_26_12()) return true;
    return false;
  }

  private boolean jj_3R_not_exp_163_29_10()
 {
    if (jj_scan_token(NEG)) return true;
    if (jj_3R_expr_151_26_12()) return true;
    return false;
  }

  private boolean jj_3_16()
 {
    if (jj_scan_token(OR)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public ProjLangParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[26];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public ProjLangParser(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ProjLangParser(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ProjLangParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 0; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public ProjLangParser(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ProjLangParserTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ProjLangParserTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public ProjLangParser(ProjLangParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(ProjLangParserTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error {
    @Override
    public Throwable fillInStackTrace() {
      return this;
    }
  }
  static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		 jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		 jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
	 if (pos >= 100) {
		return;
	 }

	 if (pos == jj_endpos + 1) {
	   jj_lasttokens[jj_endpos++] = kind;
	 } else if (jj_endpos != 0) {
	   jj_expentry = new int[jj_endpos];

	   for (int i = 0; i < jj_endpos; i++) {
		 jj_expentry[i] = jj_lasttokens[i];
	   }

	   for (int[] oldentry : jj_expentries) {
		 if (oldentry.length == jj_expentry.length) {
		   boolean isMatched = true;

		   for (int i = 0; i < jj_expentry.length; i++) {
			 if (oldentry[i] != jj_expentry[i]) {
			   isMatched = false;
			   break;
			 }

		   }
		   if (isMatched) {
			 jj_expentries.add(jj_expentry);
			 break;
		   }
		 }
	   }

	   if (pos != 0) {
		 jj_lasttokens[(jj_endpos = pos) - 1] = kind;
	   }
	 }
  }
